// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Accounts {
  Id uuid [primary key, not null, unique]
  UserName varchar(100) [not null, unique]
  FirstName varchar(100)
  LastName varchar(100)
  Email varchar(100)
  PasswordHash text
  DateOfBirth date
  RoleId uuid [not null]
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table Roles {
  Id uuid [primary key, not null, unique]
  RoleCode varchar(50) [not null, unique]
  RoleName varchar(50)
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table Expense {
  Id uuid [primary key, not null, unique]
  AccountId uuid [not null]
  Category varchar(100)
  Amount decimal(10,2)
  Date timestamptz
  Description text
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table Goal {
  Id uuid [primary key, not null, unique]
  AccountId uuid [not null]
  GoalType varchar(100)
  TargetAmount decimal(10,2)
  CurrentAmount decimal(10,2)
  Deadline timestamptz
  Progress decimal(5,2)
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table TransactionHistory {
  Id uuid [primary key, not null, unique]
  AccountId uuid [not null]
  TransactionType varchar(50)
  Amount decimal(10,2)
  Description text
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table BudgetPlan {
  Id uuid [primary key, not null, unique]
  AccountId uuid [not null] // กำหนดให้ AccountId ห้าม NULL
  Month varchar(20)
  TotalIncome decimal(10,2)
  TotalExpenses decimal(10,2)
  SavingsGoal decimal(10,2)
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table LKPlanWiseSession {
  Id uuid [primary key]
  AccountId uuid
  LoginAt timestamptz
  Platform varchar(100)
  Os varchar(100)
  Browser varchar(100)
  LoginIp varchar(100) [not null]
  IssuedTime timestamptz
  ExpirationTime timestamptz
  SessionStatus varchar(1) [not null]  // B (Blocked), A (Active), E (Expired)
  Token text
  RefreshTokenAt  timestamptz
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

Table BlockBruteForce {
  Id uuid [primary key]
  UserName varchar(100) [not null]
  Count int
  Status varchar(1)  [not null]  // L (Locked), U (UnLock)
  LockedTime timestamptz
  UnLockTime timestamptz
  CreatedAt timestamptz
  UpdatedAt timestamptz
  CreatedBy varchar(100)
  UpdatedBy varchar(100)
}

// Define Foreign Key References
Ref: Accounts.RoleId > Roles.Id
Ref: Expense.AccountId > Accounts.Id
Ref: Goal.AccountId > Accounts.Id
Ref: TransactionHistory.AccountId > Accounts.Id
Ref: BudgetPlan.AccountId > Accounts.Id